# run-make

./: Makefile  docker-compose.yaml
db/: .env  Dockerfile
docs/temp/: modeling.md
web/: .gitignore  Dockerfile  README.md  pyproject.toml
web/account/: admin.py  forms.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
web/account/emails/: activation_by_email.txt
web/account/migrations/: 0001_initial.py  0002_user_is_email_verified.py
web/account/templates/: verify_email.html
web/account/templates/account/: resend_verify_email.html  verify_email_resend.html  verify_email_resend_success.html  verify_email_success.html  verify_expired_failed_to_resend.html  verify_expired_failed_to_resend_failed.html  verify_expired_token_error.html  verify_other_error.html  verify_other_failed.html
web/account/templates/email/: activation_by_email_resend.txt
web/account/tests/: __init__.py  test_user_manager.py
web/authenticator/: apps.py  urls.py
web/config/: settings.py  urls.py
web/config/settings/: base.py  local.py  test.py
web/script/: genenv.py
web/templates/: base.html  index.html
web/templates/components/: header.html
